Style Home page

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Bowlby+One+SC&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Chewy&family=Lilita+One&family=Londrina+Solid&family=Patrick+Hand&display=swap"
       rel="stylesheet"
     />
     <title>Count To Ten</title>
