Minor style changes

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Londrina+Solid&family=Love+Ya+Like+A+Sister&family=Patrick+Hand&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,700;1,400&family=Chelsea+Market&family=Londrina+Solid&family=Love+Ya+Like+A+Sister&display=swap"
       rel="stylesheet"
     />
     <title>Count To Ten</title>
