Add icons and Book links

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
       href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,700;1,400&family=Chelsea+Market&family=Londrina+Solid&family=Love+Ya+Like+A+Sister&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/599a34b425.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Count To Ten</title>
   </head>
   <body>
