Update meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,19 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Count to 10 with Zowen and his friends!"
     />
+    <meta property="og:title" content="Count to Ten" />
+    <meta
+      property="og:description"
+      content="Count to 10 with Zowen and his friends!"
+    />
+    <meta property="og:image" content="http://counttoten.com/zowen-meta.png" />
+    <meta property="og:url" content="http://counttoten.com/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:site_name" content="Count to Ten" />
+    <meta name="twitter:image:alt" content="Count to Ten" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
