Update to https

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       property="og:description"
       content="Count to 10 with Zowen and his friends!"
     />
-    <meta property="og:image" content="http://counttoten.com/zowen-meta.png" />
+    <meta property="og:image" content="https://counttoten.com/zowen-meta.png" />
     <meta property="og:url" content="http://counttoten.com/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:site_name" content="Count to Ten" />
